# discuit-rs

./: COVERAGE.md  Cargo.toml  README.md
.github/workflows/: docs.yml
examples/: README.md
examples/quickstart/: main.rs
src/: client.rs  lib.rs
src/structs/: api_requests.rs  api_responses.rs  api_types.rs  internal_types.rs  mod.rs
