[package]
name = "discuit-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde_json = "1.0.64"
