[package]
name = "discuit-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ttaylor-st/discuit-rs.git"
homepage = "https://github.com/ttaylor-st/discuit-rs"
description = "a rust library for easily interacting with the Discuit API "
authors = ["ttaylor-st <ttaylor-st@murena.io>"]
readme = "README.md"
documentation = "https://ttaylor-st.github.io/discuit-rs/ "

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json", "cookies"] }
serde_json = "1.0.64"
rand = "0.8.5"
